--- a/aulas/lab-ds/.github/workflow/deploy-docs.yml
+++ b/aulas/lab-ds/.github/workflow/deploy-docs.yml
@@ -19,12 +19,9 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - run: npm ci
+      - run: npm ci --legacy-peer-deps
 
-      - run: npm run build
-        env:
-          TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          TURBO_TEAM: rocketseat
+      - run: npm run build-storybook
 
       - name: Deploy storybook
         working-directory: ./packages/docs
